src/index.css
@font-face {
  font-family: Overpass;
  font-style: normal;
  font-weight: 200;
  src: url('./Fonts/overpass-v11-latin-200.woff2') format('woff2');
}

@font-face {
  font-family: Overpass;
  font-style: normal;
  font-weight: 200;
  src: url('./Fonts/overpass-v11-latin-200.woff2') format('woff2');
}

@font-face {
  font-family: Overpass;
  font-style: normal;
  font-weight: 300;
  src: url('./Fonts/overpass-v11-latin-300.woff2') format('woff2');
}

@font-face {
  font-family: Overpass;
  font-style: normal;
  font-weight: 400;
  src: url('./Fonts/overpass-v11-latin-regular.woff2') format('woff2');
}

@font-face {
  font-family: Overpass;
  font-style: normal;
  font-weight: 600;
  src: url('./Fonts/overpass-v11-latin-600.woff2') format('woff2');
}

@font-face {
  font-family: Overpass;
  font-style: normal;
  font-weight: 700;
  src: url('./Fonts/overpass-v11-latin-700.woff2') format('woff2');
}

:root {
  --color-lily-green: #c8ce94;
  --color-turquoise: #378e9a;
  --color-dark: #0c212a;
  --color-black-feather: #0d2022;
  --color-ming: #166871;
  --color-emerald: #8f9463;
  --color-olive: #64683e;
  --color-light-blue: #77e4e0;
  --color-wall-green: #abaf88;
  --color-spanish-grey-rgb: 151, 151, 151;
  --color-burgundy: #411329;
  --color-pixel-red: #ba0021;
  --body-font: 'Overpass';

  font-size: 16px;
  font-family:
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    Overpass,
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
}

